--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <section class="Botoes">
     <div class="container">
         <div class="botao_home">
-		  <img src = "imagens/1.jpg" width = "250" heigth = "150">
+		  <img src = "imagens/iot.png" width = "250" heigth = "150">
         </div>
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
-				<input type="image" src="imagens/blue/home_btn.png" onClick="this.form.submit()">
+                <a  href="Monitor.html">
+			    <img NAME="bar_04" src="imagens/blue/gear_btn.png"  ALT=""></a>
 			</form>
 		</div>
 	</div>
@@ -24,24 +25,24 @@
         <table>
 	        <tr>
 		        <td>
-			        <a ONMOUSEOVER="changeImages('imagens/bt1.png', 'imagens/bt2.png');  true;" ONMOUSEOUT="changeImages('imagens/bt1.png', 'imagens/bt2.png');true;" href="mqtt">
-			        <img NAME="bar_04" src="imagens/graficobola.jpg" ALT=""></a>
+			        <a href="mqtt.html">
+			        <img NAME="bar_04" src="imagens/blue/raio_btn.png" ALT=""></a>
                 </td>	
             </tr>
         </table>
         <table>
             <tr>
 		        <td>
-			        <a ONMOUSEOVER="changeImages('imagens/bt1.png', 'imagens/bt2.png'); true;" ONMOUSEOUT="changeImages('imagens/bt1.png', 'imagens/bt2.png'); true;" href="Grafico.html">
-			        <img NAME="bar_04" src="imagens/graficoquad.jpg"  ALT=""></a>
+			        <a  href="Grafico.html">
+			        <img NAME="bar_04" src="imagens/blue/graph_btn.png"  ALT=""></a>
                 </td>
             </tr>
         </table>
         <table>
             <tr>
 		        <td>	
-			        <a ONMOUSEOVER="changeImages('imagens/alarmeon.png', 'imagens/bt2.png');true;" ONMOUSEOUT="changeImages('imagens/alarmeon.png', 'imagens/bt2.png'); true;" href="Monitor.html">
-			        <img NAME="bar_04" src="imagens/temps.jpg"  ALT=""></a>
+			        <a href="Monitor.html">
+			        <img NAME="bar_04" src="imagens/blue/temp_btn.png"  ALT=""></a>
                 </td>
 	        </tr>
         </table>
