--- a/mqtt.html
+++ b/mqtt.html
@@ -18,7 +18,7 @@
 </div>
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
-                <a  href="Monitor.html">
+                <a  href="autentica.html">
 			    <img NAME="bar_04" src="imagens/blue/gear_btn.png"  ALT=""></a>
 			</form>
 		</div>
