--- a/Monitor.html
+++ b/Monitor.html
@@ -192,7 +192,7 @@ async function getContent() {
 						mode: 'cors',
 						cache: 'default'
 						}
-		fetch('http://127.0.0.1:8081/temps').then(function (response){
+		fetch('https://polar-beyond-82520.herokuapp.com/temps').then(function (response){
 			return response.text()})
 		.then(data=>{
 			console.log(data)
@@ -234,7 +234,7 @@ const init = {
 	//mqtt_show.send (dados);
 
 // chamar post na api
-const response = await fetch('http://127.0.0.1:8081/temps',init)
+const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
 const datos = await response.json()
 
 console.log(datos)
