--- a/mqtt.html
+++ b/mqtt.html
@@ -61,7 +61,7 @@ async function mqtt_show() {
 		mode: 'cors',
 		cache: 'default'
 					}
-	fetch('http://127.0.0.1:8081/mqtt').then(function (response){
+	fetch('https://polar-beyond-82520.herokuapp.com/mqtt').then(function (response){
 	return response.text()})
 	.then(data=>{
 	console.log(data)
@@ -87,7 +87,7 @@ const init = {
 	body: JSON.stringfy(dados)
 //	body: dados
 	}
-const response = fetch('http://127.0.0.1:8081/temps',init)
+const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
 const datas =  response
 console.log(dados)
 console.log(response)
