--- a/mqtt.html
+++ b/mqtt.html
@@ -93,6 +93,11 @@ const datas =  response
 console.log(dados)
 console.log(response)
 })
+const arrayTemps= [];
+hora1 = arrayTemps.push(temp);
+arrayTemps.forEach(function (item, indice, array) {
+	console.log(item, indice);
+
 }
 </script>
 </html>
