--- a/mqtt.html
+++ b/mqtt.html
@@ -94,10 +94,10 @@ console.log(dados)
 console.log(response)
 })
 const arrayTemps= [];
-hora1 = arrayTemps.push(temp);
-arrayTemps.forEach(function (item, indice, array) {
-	console.log(item, indice);
-
+//hora1 = arrayTemps.push(temp);
+//arrayTemps.forEach(function (item, indice, array) {
+	console.log(arrayTemps);
 }
+
 </script>
 </html>
