--- a/mqtt.html
+++ b/mqtt.html
@@ -94,7 +94,7 @@ console.log(dados)
 console.log(response)
 })
 const arrayTemps= [];
-//hora1 = arrayTemps.push(temp);
+hora1 = arrayTemps.push(temp);
 //arrayTemps.forEach(function (item, indice, array) {
 	console.log(arrayTemps);
 }
