--- a/mqtt.html
+++ b/mqtt.html
@@ -97,6 +97,9 @@ const arrayTemps= [];
 hora1 = arrayTemps.push(temp);
 //arrayTemps.forEach(function (item, indice, array) {
 	console.log(arrayTemps);
+	console.log(arrayTemps[0]);
+	console.log(arrayTemps[1]);
+	console.log(arrayTemps[2]);
 }
 
 </script>
