--- a/mqtt.html
+++ b/mqtt.html
@@ -96,7 +96,7 @@ console.log(response)
 const arrayTemps= [];
 hora1 = arrayTemps.push(temp);
 //arrayTemps.forEach(function (item, indice, array) {
-	console.log(arrayTemps);
+	console.log(hora1);
 	console.log(arrayTemps[0]);
 	console.log(arrayTemps[1]);
 	console.log(arrayTemps[2]);
