--- a/Monitor.html
+++ b/Monitor.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 <title>Monitor Page</title> 
 </head>
+
+
 <div class="botao_home">
 	<form name="home" action="/" method="get">
 		<div class="home_btn">
@@ -13,35 +15,7 @@
 		</div>
 	</form>
 </div>
-
-<body onload="startTime()">
-
-		
-
-	<br>
-		<form action="Relogio" method="post">
-		<h3>
-		<table>
-		<tr><td colspan = 6><h1>Relogio IOT</h1></tr></td>
-		<tr><td>Hora </td> <td><h1 id = "txt"> </h1></td></tr>
-		<tr><td><h2>Disparo </h2></td>
-		<td><input type="text" 	name = "hd" value = "10" size="12" >
-			<input type="text"  name = "md" value = "10"  size="12" > 
-			<input type="text" 	name = "sd" value = "10"  size="12" > </td> 
-			<tr></tr><td><h1 id = "disp"> </h1></td></tr>
-		<tr><td><h2>Tempo ligado </h2></td><td><input type="text" id="tempo" value="" maxlength="16" ></td> <td><h2 id="tempo"></h2></td></tr>
-		<td rowspan =2>Estado<td><span id="rele">N/D</span></td>
-		</tr>
-		<tr><td>
-			<input type="button" id="btnOn" value="Ligar" onClick="setRelay(1)">
-			<input type="button" id="btnOff" value="Desligar" onClick="setRelay(0)">
-			<input type="button" id="btndisp" value="Setar" onClick="setdisp()">
-		</td></tr>
-		</h3>
-		</table>
-		</form>
-		
-<br>
+<body>
 <div>
 <form action="/mqtt" method = "get">
 	<table>
@@ -128,29 +102,8 @@
 </div>
 </body>
 
-<script type="text/javascript">
-    function startTime() {
-        var today=new Date();
-        var h=today.getHours();
-        var m=today.getMinutes();
-        var s=today.getSeconds();
-        // add a zero in front of numbers<10
-        m=checkTime(m);
-        s=checkTime(s);
-        document.getElementById('txt').innerHTML=h+":"+m+":"+s;
-        t=setTimeout('startTime()',500);
-    }
-   
-function checkTime(i){
-    if (i<10) {
-        i="0" + i;
-    }
-        return i;
-    }
-</script>
 
 <script type="text/javascript">
-
 function stoploop(){
 	var t = 0;
 			if (t>=12) {
@@ -164,27 +117,6 @@ function stoploop(){
 </script>
 
 <script type="text/javascript">
-function setdisp() {
-	  //  var disp;
-		var hd=document.getElementById('hd');
-		var md=document.getElementById('md');
-		var sd=document.getElementById('sd');
-	
-		// add a zero in front of numbers<10
-	   // m=checkTime(m);
-	   // s=checkTime(s);
-		document.getElementById('disp').innerHTML=hd+":"+md+":"+sd;
-	}
- 
-//var contagem = setInterval(function(){
-//	mqtt_show();
-//	getContent();
-//	stoploop();
-//},2000); 
-</script>
-<script type="text/javascript">
-
-
 async function getContent() {
 	//Obtem dados do banco de dados
 		const options = {
@@ -192,7 +124,9 @@ async function getContent() {
 						mode: 'cors',
 						cache: 'default'
 						}
-		fetch('https://polar-beyond-82520.herokuapp.com/temps').then(function (response){
+		//fetch('https://polar-beyond-82520.herokuapp.com/temps')
+		fetch('http://127.0.0.1:8081/temps')
+		.then(function (response){
 			return response.text()})
 		.then(data=>{
 			console.log(data)
@@ -234,30 +168,13 @@ const init = {
 	//mqtt_show.send (dados);
 
 // chamar post na api
-const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+//const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+const response = await fetch('http://127.0.0.1:8081/temps')
 const datos = await response.json()
 
 console.log(datos)
 }
 
-function show(user){
-	//let output = ''
-	//for (let user of users){
-	//		output += `<li>${user.name}</li>`
-	//	}
-	//	document.querySelector('user').innerHTML=output	
-		const tbody = document.getElementById('tbody')
-		tbody.innerHTML = people.map( user=> {
-	//	people = document.createElement('user').innerHTML = person;
-		//tbody.appendChild(people)
-	return ` 
-		<tr>
-			<h2 id = "user"></h2>	
-			<td>${user.id}</td>
-			<td>${user.nome}</td>
-		</tr>`
-		})
-}
 
 </script>
 
