--- a/mqtt.html
+++ b/mqtt.html
@@ -1,3 +1,5 @@
+
+
 <html>
 <head>
 <meta charset="UTF-8">
@@ -5,7 +7,9 @@
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 </head>
-<body > 
+	
+<body onload="startTime()">
+
 <section class="Botoes">
 <div class="container">
         
@@ -35,7 +39,17 @@
                 </td>	
             </tr>
         </table>
+        <table>
+	        <tr>
+		        <td>
+			        <a onclick = Relogio() >
+			        <img NAME="bar_04" src="imagens/blue/lamp_btn.png" ALT=""></a>
+                </td>	
+            </tr>
+        </table>
 	</div>
+</section>
+
 <div class =  container>
 <form action="/mqtt" method = "get">
  <table>
@@ -50,25 +64,58 @@
 </table>
 </form>
 
+<br>
+<form action="Relogio" method="post">
+<h3>
+<table>
+<tr><td colspan = 6><h1>Relogio IOT</h1></tr></td>
+<tr><td>Hora </td> <td><h1 id = "txt"> </h1></td></tr>
+<tr><td><h2>Disparo </h2></td>
+<td><input type="text" 	name = "hd" value = "10" size="6" >
+	<input type="text"  name = "md" value = "10"  size="6" > 
+	<input type="text" 	name = "sd" value = "10"  size="6" > </td> 
+	<tr></tr><td><h1 id = "disp"> </h1></td></tr>
+<tr><td><h2>Tempo ligado </h2></td><td><input type="text" id="tempo" value="" maxlength="16" ></td> <td><h2 id="tempo"></h2></td></tr>
+<td rowspan =2>Estado<td><span id="rele">N/D</span></td>
+</tr>
+<tr><td>
+	<input type="button" id="btnOn" value="Ligar" onClick="setRelay(1)">
+	<input type="button" id="btnOff" value="Desligar" onClick="setRelay(0)">
+	<input type="button" id="btndisp" value="Setar" onClick="setdisp()">
+</td></tr>
+</h3>
+</table>
+</form>
+
+<br>
 </div>
 </section>
 
 </body>
+<script type="text/javascript">
+	
+//var contagem = setInterval(function(){
+//	mqtt_show();
+//	getContent();
 
-<script>
+//},2000); 
+
 async function mqtt_show() {
 	const options = {
 		method: 'GET',
 		mode: 'cors',
 		cache: 'default'
 					}
-	fetch('https://polar-beyond-82520.herokuapp.com/mqtt').then(function (response){
+	//const response =fetch('https://polar-beyond-82520.herokuapp.com/mqtt')
+	//const response =fetch(URI)
+	const response = fetch('http://127.0.0.1:8081/mqtt')
+	.then(function (response){
 	return response.text()})
 	.then(data=>{
 	console.log(data)
 	const myObj = JSON.parse(data)
-	let local = document.getElementById('local').innerText=myObj.vm.local;
-	let temp = document.getElementById('temp').innerText=parseInt(myObj.vm.temp);
+	var local = document.getElementById('local').innerText=myObj.vm.local;
+	var temp = document.getElementById('temp').innerText=parseInt(myObj.vm.temp);
 	let dia = document.getElementById('dia').innerText=parseInt(myObj.vm.dia);
 	let mes = document.getElementById('mes').innerText=parseInt(myObj.vm.mes);
 	let ano = document.getElementById('ano').innerText = parseInt(myObj.vm.ano);
@@ -80,6 +127,15 @@ const dados = {
 	"mes": Number(mes),
 	"ano": Number(ano)
 }
+
+const arrayTemps= [];
+for (var hora1 =0; hora1<11; hora1++)
+{
+hora1 = arrayTemps.push(temp);
+console.log(hora1);
+//arrayTemps.forEach(function (item, indice, array) {
+}
+console.log(arrayTemps);
 const init = {
 	method: 'post',
 	headers: {
@@ -88,19 +144,50 @@ const init = {
 	body: JSON.stringfy(dados)
 //	body: dados
 	}
-const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+//const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+const response = fetch('http://127.0.0.1:8081/temps',init)
 const datas =  response
 console.log(dados)
 console.log(response)
+
 })
-const arrayTemps= [];
-hora1 = arrayTemps.push(temp);
-//arrayTemps.forEach(function (item, indice, array) {
-	console.log(hora1);
-	console.log(arrayTemps[0]);
-	console.log(arrayTemps[1]);
-	console.log(arrayTemps[2]);
+
 }
 
+function Relogio() {
+	//  var disp;
+	  var hd=document.getElementById('hd');
+	  var md=document.getElementById('md');
+	  var sd=document.getElementById('sd');
+  
+	  // add a zero in front of numbers<10
+	 // m=checkTime(m);
+	 // s=checkTime(s);
+	  document.getElementById('disp').innerHTML=hd+":"+md+":"+sd;
+	  
+  }
+
+</script>
+
+<script type="text/javascript">
+    function startTime() {
+        var today=new Date();
+        var h=today.getHours();
+        var m=today.getMinutes();
+        var s=today.getSeconds();
+        // add a zero in front of numbers<10
+        m=checkTime(m);
+        s=checkTime(s);
+        document.getElementById('txt').innerHTML=h+":"+m+":"+s;
+        t=setTimeout('startTime()',500);
+    }
+   
+function checkTime(i){
+	
+    if (i<10) {
+        i="0" + i;
+    }
+        return i;
+    }
 </script>
 </html>
