--- a/Monitor.html
+++ b/Monitor.html
@@ -124,8 +124,8 @@ async function getContent() {
 						mode: 'cors',
 						cache: 'default'
 						}
-		//fetch('https://polar-beyond-82520.herokuapp.com/temps')
-		fetch('http://127.0.0.1:8081/temps')
+		fetch('https://polar-beyond-82520.herokuapp.com/temps')
+		//fetch('http://127.0.0.1:8081/temps')
 		.then(function (response){
 			return response.text()})
 		.then(data=>{
