--- a/mqtt.html
+++ b/mqtt.html
@@ -106,9 +106,9 @@ async function mqtt_show() {
 		mode: 'cors',
 		cache: 'default'
 					}
-	//const response =fetch('https://polar-beyond-82520.herokuapp.com/mqtt')
+	const response =fetch('https://polar-beyond-82520.herokuapp.com/mqtt')
 	//const response =fetch(URI)
-	const response = fetch('http://127.0.0.1:8081/mqtt')
+	//const response = fetch('http://127.0.0.1:8081/mqtt')
 	.then(function (response){
 	return response.text()})
 	.then(data=>{
@@ -144,8 +144,8 @@ const init = {
 	body: JSON.stringfy(dados)
 //	body: dados
 	}
-//const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
-const response = fetch('http://127.0.0.1:8081/temps',init)
+const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+//const response = fetch('http://127.0.0.1:8081/temps',init)
 const datas =  response
 console.log(dados)
 console.log(response)
