--- a/Grafico.html
+++ b/Grafico.html
@@ -7,7 +7,11 @@
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="grafico.js"></script>
-<script type='text/javascript' src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script>
+google.charts.load('current',{packages:['corechart']});
+google.charts.setOnLoadCallback(drawChart);
+</script>
 </head>
 <body>
    
@@ -27,7 +31,7 @@
     <div class="container1">
      <div class="botão_chart">
         <form name="apaga" action="#" method="get">
-            <input type="image" src = "/imagens/blue/graph_btn.png" onClick="draw_Chart2()">
+            <input type="image" src = "/imagens/blue/graph_btn.png" onClick="drawChart()">
             <p>Draw Chart 2</p>
         </form>
         <form name="apaga" action="#" method="get">
@@ -57,8 +61,8 @@
         <div class="_dados">
             <h3>
 	         <table>
-	                <tr><th>TEMPERATURAS </th></tr>
-                    <tr><td><h2>01</h2></td><td><h2 id ='Temp1'></h2></td></tr>
+	                <tr><th colspan = 2>TEMPERATURAS </th></tr>
+                    <tr><td><h1>01</h1></td><td><h1 id ='Temp1'></h1></td></tr>
                     <tr><td><h2>02</h2></td><td><h2 id ='Temp2'></h2></td></tr>       
                     <tr><td><h2>03</h2></td><td><h2 id ='Temp3'></h2></td></tr>   
                     <tr><td><h2>03</h2></td><td><h2 id ='Temp4'></h2></td></tr>   
