--- a/Grafico.html
+++ b/Grafico.html
@@ -62,11 +62,11 @@ google.charts.setOnLoadCallback(drawChart);
             <h3>
 	         <table>
 	                <tr><th colspan = 2>TEMPERATURAS </th></tr>
-                    <tr><td><h1>01</h1></td><td><h1 id ='Temp1'></h1></td></tr>
-                    <tr><td><h2>02</h2></td><td><h2 id ='Temp2'></h2></td></tr>       
-                    <tr><td><h2>03</h2></td><td><h2 id ='Temp3'></h2></td></tr>   
-                    <tr><td><h2>03</h2></td><td><h2 id ='Temp4'></h2></td></tr>   
-                    <tr><td><h2>03</h2></td><td><h2 id ='Temp5'></h2></td></tr>   
+                  
+
+                    <tbody id = "mytable">
+
+                    </tbody>
                     
 	        </table>
                 <ul>
