--- a/Monitor.html
+++ b/Monitor.html
@@ -168,8 +168,8 @@ const init = {
 	//mqtt_show.send (dados);
 
 // chamar post na api
-//const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
-const response = await fetch('http://127.0.0.1:8081/temps')
+const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
+//const response = await fetch('http://127.0.0.1:8081/temps')
 const datos = await response.json()
 
 console.log(datos)
