--- a/Monitor.html
+++ b/Monitor.html
@@ -142,6 +142,16 @@ async function getContent() {
 }
 
 async function cad_new_temp(){
+	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
+fetch('https://polar-beyond-82520.herokuapp.com/temps')
+.then(function (response){
+return response.text()})
+.then(data=>{
+const myObj = JSON.parse(data)
+var local = document.getElementById('local').innerHTML= myObj.temps[0].local;
+var temperatura = document.getElementById('temperatura').innerHTML= myObj.temps[0].temperatura;
+})			
+
 var local = local;
 var temperatura = temperatura;
 const date = new Date();
