--- a/Grafico.html
+++ b/Grafico.html
@@ -62,15 +62,21 @@ google.charts.setOnLoadCallback(drawChart);
             <h3>
 	         <table>
 	                <tr><th colspan = 2>TEMPERATURAS </th></tr>
-                  
-
                     <tbody id = "mytable">
-
                     </tbody>
-                    
 	        </table>
                 <ul>
                 </ul>
+
+<table>
+<tr><td><h1>Temp1</h1></td><td><h1 id = "Temp1"></h1></td></tr>
+<tr><td><h1>Temp2</h1></td><td><h1 id = "Temp2"></h1></td></tr>
+<tr><td><h1>Temp3</h1></td><td><h1 id = "Temp3"></h1></td></tr>
+<tr><td><h1>Temp4</h1></td><td><h1 id = "Temp4"></h1></td></tr>
+<tr><td><h1>Temp5</h1></td><td><h1 id = "Temp5"></h1></td></tr>
+
+</table>
+
             </h3>
         </div>
     </div>
