--- a/Monitor.html
+++ b/Monitor.html
@@ -148,11 +148,11 @@ fetch('https://polar-beyond-82520.herokuapp.com/temps')
 return response.text()})
 .then(data=>{
 const myObj = JSON.parse(data)
-var local = document.getElementById('local').innerHTML= myObj.vm.local;
+var local = document.getElementById('local').innerHTML= myObj.temps[0].local;
 var temperatura = document.getElementById('temperatura').innerText= parseInt(myObj.vm.temp);
 })			
 
-var local = myObj.vm.local;
+var local = myObj.temps[0].local;
 var temperatura = myObj.vm.temp;
 const date = new Date();
 var dias = date.getDate();
