--- a/Monitor.html
+++ b/Monitor.html
@@ -160,7 +160,7 @@ console.log(local,temperatura,dias, meses, anos)
 
 const dados = {
 	"local": local,
-	"temperatura":parseInt(myObj.vm.temp),
+	"temperatura":temperatura,
 	"dia": dias,
 	"mes": meses,
 	"ano": anos
