--- a/Monitor.html
+++ b/Monitor.html
@@ -151,12 +151,15 @@ return response.text()})
 const myObj = JSON.parse(data)
 var local = document.getElementById('local').innerHTML= myObj.vm.local;
 var temperatura = document.getElementById('temperatura').innerText= parseInt(myObj.vm.temp);
+var dias = document.getElementById('dia').innerText= parseInt(date.getDate());
+var meses = document.getElementById('mes').innerText= parseInt(date.getMonth()+ 1);
+var anos = document.getElementById('ano').innerText= parseInt(date.getFullYear());
 })			
 
 const date = new Date();
-var dias = date.getDate();
-var meses = date.getMonth()+ 1;
-var anos = date.getFullYear();
+//var dias = date.getDate();
+//var meses = date.getMonth()+ 1;
+//var anos = date.getFullYear();
 console.log(local,temperatura,dias, meses, anos)
 
 const dados = {
@@ -171,6 +174,7 @@ const init = {
 	method: 'post',
 	headers: {
 "Content-type": 'application/json'
+
 	},
 	body: JSON.stringify(dados)
 	}
