--- a/Monitor.html
+++ b/Monitor.html
@@ -135,8 +135,8 @@ async function getContent() {
 			const myObj = JSON.parse(data)
 			//let divid = document.querySelector(".id")
 			//const list = document.querySelector('#fill_list')
-			var local = document.getElementById('local').innerHTML= myObj.temps[position].local;
-			var temperatura = document.getElementById('temperatura').innerHTML= myObj.temps[position].temperatura;
+			var local = document.getElementById('local').innerHTML= myObj.temps[5].local;
+			var temperatura = document.getElementById('temperatura').innerHTML= myObj.temps[0].temperatura;
 			var dia = document.getElementById('dia').innerHTML= myObj.temps[0].dia;
 			var mes = document.getElementById('mes').innerHTML= myObj.temps[0].mes;
 			var ano = document.getElementById('ano').innerText= myObj.temps[0].ano;
