--- a/Monitor.html
+++ b/Monitor.html
@@ -161,7 +161,7 @@ const date = new Date();
 //var dias = date.getDate();
 //var meses = date.getMonth()+ 1;
 //var anos = date.getFullYear();
-console.log(local,temperatura,dias, meses, anos)
+//console.log(local,temperatura,dias, meses, anos)
 
 const dados = {
 	"local": local,
