--- a/Grafico.html
+++ b/Grafico.html
@@ -11,6 +11,8 @@
 <script>
 google.charts.load('current',{packages:['corechart']});
 google.charts.setOnLoadCallback(drawChart);
+google.charts.setOnLoadCallback(draw_Chart2);
+google.charts.setOnLoadCallback(getData);
 </script>
 </head>
 <body>
