--- a/Monitor.html
+++ b/Monitor.html
@@ -173,7 +173,7 @@ const dados = {
 	}
 
 //const response = await fetch('http://127.0.0.1:8081/temps')
-const response = await fetch('https://polar-beyond-82520.herokuapp.com/temps',{
+const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',{
 method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 body: JSON.stringify(
