--- a/Monitor.html
+++ b/Monitor.html
@@ -178,11 +178,11 @@ method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 body: JSON.stringify(
 	{
-	"local": local,
-	"temperatura":temperatura,
-	"dia": dias,
-	"mes": meses,
-	"ano": anos
+	"local": (myObj.vm.local),
+	"temperatura":parseInt(myObj.vm.temp);,
+	"dia": parseInt(myObj.vm.dia);,
+	"mes": parseInt(myObj.vm.mes);,
+	"ano": parseInt(myObj.vm.ano);
 	})
 })
 })	
