--- a/Monitor.html
+++ b/Monitor.html
@@ -179,10 +179,10 @@ headers: { "Content-type": 'application/json'},
 body: JSON.stringify(
 	{
 	"local": (myObj.vm.local),
-	"temperatura":parseInt(myObj.vm.temp);,
-	"dia": parseInt(myObj.vm.dia);,
-	"mes": parseInt(myObj.vm.mes);,
-	"ano": parseInt(myObj.vm.ano);
+	"temperatura":parseInt(myObj.vm.temp),
+	"dia": parseInt(myObj.vm.dia),
+	"mes": parseInt(myObj.vm.mes),
+	"ano": parseInt(myObj.vm.ano)
 	})
 })
 })	
