cad new automatic

--- a/Monitor.html
+++ b/Monitor.html
@@ -94,7 +94,7 @@
 	<table>
 	<tr><th colspan = 2>DELETAR</th></tr>
 	<tr>
-	<td><input type="text" value="dia" name = "dia" size="5" > </td>
+	<td><input type="text" value="id" name = "id" size="32" > </td>
 	<td><button type="submit">Deletar</button></td>
 	</tr>
 	</table>
@@ -117,6 +117,14 @@ function stop(){
 </script>
 
 <script type="text/javascript">
+
+setInterval(function()
+	{
+	cad_new_temp();
+		
+	}, 10000);
+
+
 async function getContent() {
 	//Obtem dados do banco de dados
 		const options = {
@@ -145,45 +153,40 @@ async function getContent() {
 
 async function cad_new_temp(){
 
-	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
+const options = {method: 'GET',	mode: 'cors',cache: 'default'}
 fetch('https://polar-beyond-82520.herokuapp.com/mqtt')
 .then(function (response){
 return response.text()})
 .then(data=>{
-const myObj = JSON.parse(data)
-const date = new Date();
-var local = document.getElementById('local').innerHTML= myObj.vm.local;
+const myObj 	= JSON.parse(data)
+const date 		= new Date();
+var local 		= document.getElementById('local').innerHTML= myObj.vm.local;
 var temperatura = document.getElementById('temperatura').innerText= parseInt(myObj.vm.temp);
-var dias = document.getElementById('dia').innerText= parseInt(date.getDate());
-var meses = document.getElementById('mes').innerText= parseInt(date.getMonth()+ 1);
-var anos = document.getElementById('ano').innerText= parseInt(date.getFullYear());
+var dias 		= document.getElementById('dia').innerText= parseInt(date.getDate());
+var meses		= document.getElementById('mes').innerText= parseInt(date.getMonth()+ 1);
+var anos		= document.getElementById('ano').innerText= parseInt(date.getFullYear());
 		
-
-//var dias = date.getDate();
-//var meses = date.getMonth()+ 1;
-//var anos = date.getFullYear();
-//console.log(local,temperatura,dias, meses, anos)
-
 const dados = {
-	"local": local,
-	"temperatura":temperatura,
-	"dia": dias,
-	"mes": meses,
-	"ano": anos
+	"local": (myObj.vm.local),
+	"temperatura": parseInt(myObj.vm.temp),
+	"dia": parseInt(myObj.vm.dia),
+	"mes": parseInt(myObj.vm.mes),
+	"ano": parseInt(myObj.vm.ano)
 	}
 
 //const response = await fetch('http://127.0.0.1:8081/temps')
 const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',{
 method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
-body: JSON.stringify(
-	{
-	"local": (myObj.vm.local),
-	"temperatura": parseInt(myObj.vm.temp),
-	"dia": parseInt(myObj.vm.dia),
-	"mes": parseInt(myObj.vm.mes),
-	"ano": parseInt(myObj.vm.ano)
-	})
+body: JSON.stringify(dados
+	//{
+	//"local": (myObj.vm.local),
+	//"temperatura": parseInt(myObj.vm.temp),
+	//"dia": parseInt(myObj.vm.dia),
+	//"mes": parseInt(myObj.vm.mes),
+	//"ano": parseInt(myObj.vm.ano)
+	//}
+	)
 })
 })	
 .then((response) => {
@@ -199,7 +202,6 @@ body: JSON.stringify(
 }).catch((err) => {
 console.log('Ocorreu um erro no servidor \n Erro: '+ err);
 	})
-
 }
 
 </script>
