--- a/Monitor.html
+++ b/Monitor.html
@@ -94,7 +94,7 @@
 	<table>
 	<tr><th colspan = 2>DELETAR</th></tr>
 	<tr>
-	<td><input type="text" value="id" name = "id" size="32" > </td>
+	<td><input type="text" value="_id" name = "id" size="32" > </td>
 	<td><button type="submit">Deletar</button></td>
 	</tr>
 	</table>
