--- a/Monitor.html
+++ b/Monitor.html
@@ -90,7 +90,7 @@
 </form>	
 <br>
 
-<form action="/temps" method = "post">
+<form action="/temps" method = "delete">
 	<table>
 	<tr><th colspan = 2>DELETAR</th></tr>
 	<tr>
