--- a/Monitor.html
+++ b/Monitor.html
@@ -146,9 +146,9 @@ async function getContent() {
    				 }
 				}
 
-			console.log("tamanho: ",tamanho)
+			console.log("tamanho: ", tamanho)
 			
-			console.log("position: "position)
+			console.log("position: ", position)
 			const myObj = JSON.parse(data)
 			//let divid = document.querySelector(".id")
 			//const list = document.querySelector('#fill_list')
