--- a/mqtt.html
+++ b/mqtt.html
@@ -75,17 +75,17 @@
 <tr><td colspan = 6><h1>Relogio IOT</h1></tr></td>
 <tr><td>Hora </td> <td><h1 id = "txt"> </h1></td></tr>
 <tr><td><h2>Disparo </h2></td>
-<td><input type="text" 	name = "hd" value = "10" size="6" >
-	<input type="text"  name = "md" value = "10"  size="6" > 
-	<input type="text" 	name = "sd" value = "10"  size="6" > </td> 
+<td><input type="text" 	name = "hd" id= "hd" value = "10" size="6" >
+	<input type="text"  name = "md" id= "md" value = "10"  size="6" > 
+	<input type="text" 	name = "sd" id= "sd" value = "10"  size="6" > </td> 
 	<tr></tr><td><h1 id = "disp"> </h1></td></tr>
 <tr><td><h2>Tempo ligado </h2></td><td><input type="text" id="tempo" value="" maxlength="16" ></td> <td><h2 id="tempo"></h2></td></tr>
 <td rowspan =2>Estado<td><span id="rele">N/D</span></td>
 </tr>
 <tr><td>
-	<input type="button" id="btnOn" value="Ligar" onClick="setRelay(1)">
-	<input type="button" id="btnOff" value="Desligar" onClick="setRelay(0)">
-	<input type="button" id="btndisp" value="Setar" onClick="setdisp()">
+	<input type="button" id="btnOn"   value="Ligar"    onClick="setRelay(1)">
+	<input type="button" id="btnOff"  value="Desligar" onClick="setRelay(0)">
+	<input type="button" id="btndisp" value="Setar"    onClick="setdisp()">
 </td></tr>
 </h3>
 </table>
@@ -97,6 +97,54 @@
 </section>
 
 </body>
+
+
+<script type="text/javascript">
+
+	function Relogio() {
+		//  var disp;
+		  var hd=document.getElementById('hd');
+		  var md=document.getElementById('md');
+		  var sd=document.getElementById('sd');
+	  
+		  // add a zero in front of numbers<10
+		 // m=checkTime(m);
+		 // s=checkTime(s);
+		  document.getElementById('disp').innerHTML=hd+":"+md+":"+sd;
+		  
+	  }
+	
+		function startTime() {
+			var today=new Date();
+			var h=today.getHours();
+			var m=today.getMinutes();
+			var s=today.getSeconds();
+			// add a zero in front of numbers<10
+			m=checkTime(m);
+			s=checkTime(s);
+			document.getElementById('txt').innerHTML=h+":"+m+":"+s;
+			t=setTimeout('startTime()',500);
+		}
+	   
+	function checkTime(i){
+		
+		if (i<10) {
+			i="0" + i;
+		}
+			return i;
+		}
+
+	function setdisp(){
+		var hd=document.getElementById('hd');
+		var md=document.getElementById('md');
+		var sd=document.getElementById('sd');
+		document.getElementById('disp').innerHTML=hd+":"+md+":"+sd;
+
+	}
+		
+
+</script>
+
 <script type="text/javascript">
 	
 var contagem = setInterval(function(){
@@ -113,11 +161,7 @@ fs.writeFile('myfile.txt', 'Hello content!', function (err) {
   });
 
 async function mqtt_show() {
-	const options = {
-		method: 'GET',
-		mode: 'cors',
-		cache: 'default'
-					}
+	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
 	const response =fetch('https://polar-beyond-82520.herokuapp.com/mqtt')
 	//const response =fetch(URI)
 	//const response = fetch('http://127.0.0.1:8081/mqtt')
@@ -126,18 +170,18 @@ async function mqtt_show() {
 	.then(data=>{
 	console.log(data)
 	const myObj = JSON.parse(data)
-	var local = document.getElementById('local').innerText=myObj.vm.local;
-	var temp = document.getElementById('temp').innerText=parseInt(myObj.vm.temp);
-	let dia = document.getElementById('dia').innerText=parseInt(myObj.vm.dia);
-	let mes = document.getElementById('mes').innerText=parseInt(myObj.vm.mes);
-	let ano = document.getElementById('ano').innerText = parseInt(myObj.vm.ano);
+	var local 	= document.getElementById('local').innerText = myObj.vm.local;
+	var temp 	= document.getElementById('temp').innerText = parseInt(myObj.vm.temp);
+	let dia	 	= document.getElementById('dia').innerText  = parseInt(myObj.vm.dia);
+	let mes 	= document.getElementById('mes').innerText  = parseInt(myObj.vm.mes);
+	let ano 	= document.getElementById('ano').innerText  = parseInt(myObj.vm.ano);
 
 const dados = {
-	"local": local,
-	"temperatura": Number(temp),
-	"dia": Number(dia),
-	"mes": Number(mes),
-	"ano": Number(ano)
+	"local": (myObj.vm.local),
+	"temperatura": parseInt(myObj.vm.temp),
+	"dia": parseInt(myObj.vm.dia),
+	"mes": parseInt(myObj.vm.mes),
+	"ano": parseInt(myObj.vm.ano)
 }
 
 const arrayTemps= [];
@@ -149,59 +193,10 @@ hora1 = arrayTemps.push(temp);
 }
 console.log(arrayTemps);
 console.log(hora1);
-
-const init = {
-	method: 'post',
-	headers: {
-"Content-type": 'text/text'
-	},
-	body: JSON.stringfy(dados)
-//	body: dados
-	}
-const response = fetch('https://polar-beyond-82520.herokuapp.com/temps',init)
-//const response = fetch('http://127.0.0.1:8081/temps',init)
-const datas =  response
 console.log(dados)
 console.log(response)
 
 })
-
 }
 
-function Relogio() {
-	//  var disp;
-	  var hd=document.getElementById('hd');
-	  var md=document.getElementById('md');
-	  var sd=document.getElementById('sd');
-  
-	  // add a zero in front of numbers<10
-	 // m=checkTime(m);
-	 // s=checkTime(s);
-	  document.getElementById('disp').innerHTML=hd+":"+md+":"+sd;
-	  
-  }
-
-</script>
-
-<script type="text/javascript">
-    function startTime() {
-        var today=new Date();
-        var h=today.getHours();
-        var m=today.getMinutes();
-        var s=today.getSeconds();
-        // add a zero in front of numbers<10
-        m=checkTime(m);
-        s=checkTime(s);
-        document.getElementById('txt').innerHTML=h+":"+m+":"+s;
-        t=setTimeout('startTime()',500);
-    }
-   
-function checkTime(i){
-	
-    if (i<10) {
-        i="0" + i;
-    }
-        return i;
-    }
-</script>
 </html>
