--- a/Monitor.html
+++ b/Monitor.html
@@ -142,7 +142,7 @@ async function getContent() {
 		position= data.keys
 		var tamanho= 0;  
 			for (const position in data) {
-   			if (data.hasOwnProperty(i))
+   			if (data.hasOwnProperty(position))
 			 {
       			  tamanho++;
    				 }
