--- a/Monitor.html
+++ b/Monitor.html
@@ -148,8 +148,8 @@ async function getContent() {
    				 }
 			}		
 			position= data.keys
-			for (const position in data) {
-		console.log(`${position}: ${data[position]}`);
+			for (const [key, value] of Object.entries (data.entries)) {
+		console.log(`${key}: ${value}`);
 			}
 		console.log("tamanho: ", tamanho)
 		console.log("position: ", position)
