--- a/Monitor.html
+++ b/Monitor.html
@@ -148,7 +148,7 @@ async function getContent() {
    				 }
 			}		
 			position= data.keys
-			for (const [key, value] of Object.entries (data.entries)) {
+			for (const [key, value] of Object.entries (data)) {
 		console.log(`${key}: ${value}`);
 			}
 		console.log("tamanho: ", tamanho)
