--- a/Monitor.html
+++ b/Monitor.html
@@ -139,15 +139,15 @@ async function getContent() {
 			return response.text()})
 		.then(data=>{
 		console.log(data)
-		position= data.keys
+		position= data.entries
 		var tamanho= 0;  
-			for (const position in data) {
-   			if (data.hasOwnProperty(position))
-			 {
-      			  tamanho++;
-   				 }
-			}		
-			position= data.keys
+			 //for (const position in data) {
+   			//if (data.hasOwnProperty(position))
+			// {
+      		//	  tamanho++;
+   			//	 }
+			//}		 
+	
 			for (const [key, value] of Object.entries (data)) {
 		console.log(`${key}: ${value}`);
 			}
