--- a/Monitor.html
+++ b/Monitor.html
@@ -148,7 +148,7 @@ async function getContent() {
    			//	 }
 			//}		 
 	
-			for (const [key, value] of Object.entries (data)) {
+			for (const [key, value] of Object.entries (temps)) {
 		console.log(`${key}: ${value}`);
 			}
 		console.log("tamanho: ", tamanho)
