--- a/mqtt.html
+++ b/mqtt.html
@@ -83,7 +83,7 @@
 <tr><td><h2 colspan = 6>Tempo ligado </h2></td>
 	<td><h1 id = "disp"> </h1></td>
 	<tr>
-	<td><input type="text" id="tempo" value="" maxlength="10" ></td> </tr>
+	<td><input type="text" id="tempod" value="" maxlength="10" ></td> 
 	<td><h2 id="tempo"></h2></td></tr>
 
 <td rowspan =2>Estado<td><span id="rele">N/D</span></td>
@@ -145,7 +145,13 @@ var countDownDate = new Date("Jun 27, 2022 15:37:25").getTime();
 		var md=document.getElementById('md');
 		var sd=document.getElementById('sd');
 		console.log(disp)
-	
+
+		document.getElementById("tempo").innerHTML =  tempo + "s ";
+
+		var Tempod = document.querySelector("#tempod")
+		var tempo = Tempod.value
+		document.getElementById("tempo").innerHTML =  tempo + "m ";
+
 	// Update the count down every 1 second
 	var x = setInterval(function() {
 	
@@ -161,10 +167,20 @@ var countDownDate = new Date("Jun 27, 2022 15:37:25").getTime();
 	  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
 	  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 	
-	  // Display the result in the element with id="demo"
+	  // Display the result in the element with id="disp"
 	  document.getElementById("disp").innerHTML = days + "d " + hours + "h "
 	  + minutes + "m " + seconds + "s ";
 	
+	  const horadisp = document.querySelector("#hd")
+	   horadisp.value = hours
+	   
+	  const  mindisp = document.querySelector("#md")
+	  mindisp.value = minutes
+	  
+	  const secdisp = document.querySelector("#sd")
+	   secdisp.value = seconds
+	
+
 	  // If the count down is finished, write some text
 	  if (distance < 0) {
 		clearInterval(x);
