--- a/Monitor.html
+++ b/Monitor.html
@@ -154,11 +154,12 @@ async function getContent() {
 			}
 
 			for (var i in myObj.temps) {
-		console.log(i + " - " + myObj.temps[i])
-		//console.log(key + "-" + value);
+		console.log(i + " - " + myObj.temps.temps[i])
+		console.log(i + " - " + myObj.temps.values[i])
+		console.log(i + " - " + myObj.temps.keys[i])
 			}
 
-		console.log("tamanho: ", tamanho)
+		console.log("tamanho: ", i)
 		console.log("position: ", position)
 			//for (var i = 0; i < data.length; i++)
 				{	
